[fix]: Landing page scaling (don't use fixed width) and footer overlap (don't use position fixed)

--- a/src/components/FooterLinks/FooterLinks.scss
+++ b/src/components/FooterLinks/FooterLinks.scss
@@ -16,12 +16,9 @@
 }
 
 .page .footer-links {
-    position : fixed;
     display        : flex;
     justify-content: center;
-    bottom         : 0;
-    left           : 0;
-    right          : 0;
+    padding-top: mm(10);
 }
 
 .sidebar .footer-links {
