--- a/src/components/Pages/ConferenceSelection/ConferenceSelection.scss
+++ b/src/components/Pages/ConferenceSelection/ConferenceSelection.scss
@@ -11,8 +11,7 @@
     }
 
     .main {
-        margin    : 0 auto;
-        width     : mm(120);
+        margin    : auto;
         text-align: center;
 
         .after-load-content {
